# Docks-Designs

gladiator/: setup.docks
gladiator/app-launcher/: CMakeLists.txt  main.cpp  style.css
gladiator/app-launcher/headers/: app-data.hpp  apps-revealer.hpp  desktop_entry.hpp  window.hpp
gladiator/app-launcher/include/: apps-holder.cpp  apps-revealer.cpp  apps-scroller.cpp  desktop_entry.cpp  window.cpp
